ACTUALLY fixes icon spacing (Thanky flatty)

--- a/html/browser/common.css
+++ b/html/browser/common.css
@@ -306,5 +306,5 @@ div.notice
 }
 .pda_icon
 {
-	vertical-align: -4px;
+	vertical-align: -3px;
 }
